Fix thumbnail image display in project cards

--- a/index.html
+++ b/index.html
@@ -458,12 +458,9 @@
         <div id="project-modal" class="modal">
             <div class="modal-content">
                 <span class="close-button">&times;</span>
-                <h3 id="modal-title"></h3>
-                <p id="modal-description"></p>
-                <div id="modal-features"></div>
-                <div id="modal-tech-stack"></div>
-                <a id="modal-live-demo" href="#" target="_blank">Live Demo</a>
-                <a id="modal-github-repo" href="#" target="_blank">GitHub Repo</a>
+                <div id="modal-body">
+                    <!-- Modal content will be dynamically inserted here -->
+                </div>
             </div>
         </div>
 
