Applied inline style to logo for definitive sizing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <header class="site-header">
             <div class="header-content">
                 <div class="logo-section">
-                    <img src="images/site_logo.jpg" alt="Mike Sites Logo" class="header-logo">
+                    <img src="images/site_logo.jpg" alt="Mike Sites Logo" class="header-logo" style="width: 40px !important; height: 40px !important; border-radius: 50% !important; object-fit: cover !important;">
                     <div class="logo-text">
                         <h1>Mike Sites</h1>
                         <span class="tagline">Living Web Lab</span>
