Added version parameter to CSS link to force cache refresh

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="twitter:description" content="Professional developer portfolio showcasing modern web development projects and innovative digital experiences.">
     <meta property="twitter:image" content="https://garymike07.github.io/Mike-sites/assets/images/og-image.jpg">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
 <body data-theme="dark">
