Implemented back button, adjusted button styles, and modified Live Demo for Personal Portfolio

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <!-- Header -->
         <header class="site-header">
             <div class="header-content">
+                <div class="back-button-container">
+                    <button id="back-to-home" class="btn btn-secondary" style="display: none;">← Back to Home</button>
+                </div>
                 <div class="logo-section">
 
                     <div class="logo-text">
