Apply requested fixes: button sizing, live demo, and filtering

--- a/index.html
+++ b/index.html
@@ -501,3 +501,15 @@
 </html>
 
 
+
+
+        <!-- Live Demos Section -->
+        <section id="demos" class="section">
+            <div class="demos-container">
+                <h2>Live Demos</h2>
+                <p>Explore interactive live demonstrations of my projects.</p>
+                <!-- Demos will be dynamically loaded here -->
+            </div>
+        </section>
+
+
