🚀 Major redesign: Professional portfolio with modern UI, enhanced features, and improved UX
✨ New Features:
- Professional hero section with animated elements
- Interactive project showcase with modal details
- Multi-theme support (Dark, Light, Neon)
- Real-time clock and daily coding tips
- Enhanced About section with timeline
- Improved Contact form with better UX

🎨 Design Improvements:
- Modern gradient backgrounds and animations
- Professional color schemes and typography
- Responsive design for all devices
- Smooth transitions and hover effects
- Custom scrollbar and loading animations

🖼️ New Assets:
- Professional avatar and hero background
- High-quality project thumbnails
- Custom icons and visual elements

🔧 Technical Enhancements:
- Improved JavaScript architecture
- Better error handling and fallbacks
- Enhanced CSS with modern features
- Optimized performance and accessibility

📱 Mobile Responsive:
- Fully responsive across all screen sizes
- Touch-friendly interactions
- Optimized mobile navigation

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <button id="back-to-home" class="btn btn-secondary" style="display: none;">← Back to Home</button>
                 </div>
                 <div class="logo-section">
-
+                    <img src="images/profile-avatar.png" alt="Mike Profile" style="width: 50px; height: 50px; border-radius: 50%; border: 2px solid var(--accent-color);">
                     <div class="logo-text">
                         <h1>Mike Sites</h1>
                         <span class="tagline">Living Web Lab</span>
@@ -166,31 +166,39 @@
                 <h2>About Me</h2>
                 <div class="about-content">
                     <div class="about-text">
-                        <p>I'm a passionate full-stack developer with a love for creating innovative web solutions. My journey in web development spans over 5 years, during which I've worked on diverse projects ranging from simple landing pages to complex SaaS applications.</p>
-                        <p>I believe in writing clean, maintainable code and creating user experiences that are both beautiful and functional. When I'm not coding, you can find me exploring new technologies, contributing to open-source projects, or sharing knowledge with the developer community.</p>
+                        <p>I'm Mike, a passionate full-stack developer and digital innovator with over 5 years of experience creating cutting-edge web solutions. My expertise spans across modern JavaScript frameworks, cloud technologies, and scalable architecture design.</p>
+                        <p>I specialize in building SaaS platforms, e-commerce solutions, and interactive web applications that deliver exceptional user experiences. My approach combines technical excellence with creative problem-solving to bring ideas to life.</p>
+                        <p>When I'm not coding, you'll find me exploring emerging technologies, contributing to open-source projects, or mentoring aspiring developers. I believe in the power of technology to transform businesses and improve lives.</p>
                     </div>
                     <div class="experience-timeline">
                         <h3>Experience Timeline</h3>
                         <div class="timeline">
                             <div class="timeline-item">
-                                <div class="timeline-date">2023 - Present</div>
+                                <div class="timeline-date">2024 - Present</div>
                                 <div class="timeline-content">
-                                    <h4>Senior Full-Stack Developer</h4>
-                                    <p>Leading development of enterprise SaaS solutions</p>
+                                    <h4>Senior Full-Stack Developer & Tech Lead</h4>
+                                    <p>Leading development of enterprise SaaS solutions and mentoring development teams</p>
                                 </div>
                             </div>
                             <div class="timeline-item">
-                                <div class="timeline-date">2021 - 2023</div>
+                                <div class="timeline-date">2022 - 2024</div>
+                                <div class="timeline-content">
+                                    <h4>Full-Stack Developer</h4>
+                                    <p>Built scalable web applications using React, Node.js, and cloud technologies</p>
+                                </div>
+                            </div>
+                            <div class="timeline-item">
+                                <div class="timeline-date">2020 - 2022</div>
                                 <div class="timeline-content">
                                     <h4>Frontend Developer</h4>
-                                    <p>Specialized in React and modern JavaScript frameworks</p>
+                                    <p>Specialized in React and modern JavaScript frameworks with focus on UX</p>
                                 </div>
                             </div>
                             <div class="timeline-item">
-                                <div class="timeline-date">2019 - 2021</div>
+                                <div class="timeline-date">2019 - 2020</div>
                                 <div class="timeline-content">
                                     <h4>Junior Developer</h4>
-                                    <p>Started journey with HTML, CSS, and JavaScript</p>
+                                    <p>Started journey with HTML, CSS, JavaScript and foundational web technologies</p>
                                 </div>
                             </div>
                         </div>
@@ -206,20 +214,24 @@
                 <div class="contact-content">
                     <div class="contact-info">
                         <h3>Let's Build Something Amazing Together</h3>
-                        <p>Have a project in mind? I'd love to hear about it. Whether it's a simple website or a complex web application, I'm here to help bring your ideas to life.</p>
+                        <p>Ready to bring your next project to life? I'm passionate about creating innovative web solutions that drive results. Whether you need a modern SaaS platform, an e-commerce solution, or a custom web application, I'm here to help.</p>
                         
                         <div class="contact-methods">
                             <div class="contact-method">
                                 <span class="contact-icon">📧</span>
-                                <span>mike@mikesites.dev</span>
+                                <span>mike.waitindi@gmail.com</span>
                             </div>
                             <div class="contact-method">
-                                <span class="contact-icon">💬</span>
-                                <span>Available for freelance work</span>
+                                <span class="contact-icon">💼</span>
+                                <span>Available for freelance & full-time opportunities</span>
                             </div>
                             <div class="contact-method">
                                 <span class="contact-icon">🌍</span>
-                                <span>Remote & Local projects</span>
+                                <span>Remote work & global collaboration</span>
+                            </div>
+                            <div class="contact-method">
+                                <span class="contact-icon">⚡</span>
+                                <span>Quick turnaround & agile development</span>
                             </div>
                         </div>
                     </div>
