🚀 Major Portfolio Enhancement: New Logo, Projects & Mobile Optimization
✨ New Features & Updates:
- Updated profile logo with professional circular avatar
- Changed hero background to beautiful blue-purple gradient
- Added 7 new comprehensive projects with realistic mockups
- Enhanced mobile and desktop responsiveness
- Integrated all content from pasted_content.txt requirements

🆕 New Projects Added:
- Mental Health App (KES 45,000) - Healthcare category
- Pharmacy Management System (KES 55,000) - Healthcare category
- Landlord Rent Management (KES 40,000) - Real Estate category
- Tourist Management System (KES 50,000) - Tourism category
- Chama App (KES 60,000) - FinTech category
- CV & Cover Letter Generator (KES 25,000) - Productivity category
- Blog Generator (KES 35,000) - Content category

🎨 Design Improvements:
- Professional project mockup images for all new projects
- Enhanced category-based color coding and badges
- Improved visual hierarchy and typography
- Modern gradient backgrounds and animations

📱 Mobile & Desktop Optimization:
- Single column layout for mobile devices (max-width: 768px)
- 3-column grid for desktop (min-width: 1200px)
- 2-column grid for tablets (769px - 1199px)
- Touch-friendly interface elements
- Optimized button sizing and spacing
- Improved navigation for mobile devices

🔧 Technical Enhancements:
- New projects-data.js file for centralized project management
- Enhanced CSS with comprehensive responsive breakpoints
- Improved category filtering and search functionality
- Professional pricing structure in Kenyan Shillings
- Modern technology stack displays for each project

💼 Portfolio Expansion:
- Now showcases 12 diverse projects across multiple industries
- Comprehensive coverage: Healthcare, Real Estate, Tourism, FinTech, Productivity, Content
- Professional project descriptions and feature lists
- Realistic pricing from KES 15,000 to KES 60,000
- Live demo links and GitHub repository integration

This update transforms the p

--- a/index.html
+++ b/index.html
@@ -425,9 +425,10 @@
     </div>
 
     <!-- JavaScript Files -->
-    <script src="js/enhanced-main.js" defer></script>
-    <script src="js/enhanced-request-form.js" defer></script>
-    <script src="js/rating-system.js" defer></script>
+    <script src="js/projects-data.js"></script>
+    <script src="js/enhanced-main.js"></script>
+    <script src="js/enhanced-request-form.js"></script>
+    <script src="js/rating-system.js"></script>
 
     <!-- Additional Scripts for Enhanced Functionality -->
     <script defer>
