--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             --bg-card: rgba(255, 255, 255, 0.05);
             --border-color: rgba(255, 255, 255, 0.1);
             --gradient-primary: linear-gradient(135deg, var(--secondary-color), #8b5cf6);
-            --gradient-hero: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            --gradient-hero: linear-gradient(135deg, #0ea5e9 0%, #06b6d4 50%, #10b981 100%);
             --transition-normal: 0.3s ease;
         }
         
